almost finished lap time rules notebook, need to add final explanation

--- a/scripts/IS_agent/N02_degradation_time_rules.ipynb
+++ b/scripts/IS_agent/N02_degradation_time_rules.ipynb
@@ -46,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Libraries and fact classes loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import standard libraries\n",
     "import pandas as pd\n",
@@ -94,9 +86,7 @@
     "# Configuring plots \n",
     "\n",
     "plt.style.use('seaborn-v0_8-darkgrid')\n",
-    "sns.set_context(\"notebook\", font_scale= 1.2)\n",
-    "\n",
-    "print(\"Libraries and fact classes loaded successfully.\")"
+    "sns.set_context(\"notebook\", font_scale= 1.2)\n"
    ]
   },
   {
@@ -122,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_32384\\4014458323.py:78: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_29832\\4014458323.py:78: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df['PreviousRates'] = df.groupby(['DriverNumber', 'Stint']).apply(\n"
      ]
     },
@@ -333,7 +323,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "1ccc6103-d9a0-444b-ae17-56a0e89f8eb8",
+       "ref": "9c8d82c0-14f5-4a31-b933-ac6d49705e9b",
        "rows": [
         [
          "0",
@@ -655,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1186,7 @@
     "    race_data = pd.read_csv(race_data_path)\n",
     "\n",
     "    # Import necessary functions\n",
-    "    from utils.N01_agent_setup import load_tire_predictions\n",
+    "    \n",
     "    predictions = load_tire_predictions(race_data, models_path)\n",
     "\n",
     "    if predictions is None:\n",
@@ -1301,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
