--- a/scripts/IS_agent/N04_nlp_rules.ipynb
+++ b/scripts/IS_agent/N04_nlp_rules.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "id": "f4930e0a",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "id": "076bccc2",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
       "    • \"Box this lap for softs,\"\n",
       "  WEATHER:\n",
       "    • \"there's rain expected in 10 minutes\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_131923.json\n"
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132414.json\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "id": "32582e52",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing json from: ../../outputs/week4/json/radio_analysis_20250409_131923.json\n"
+      "Processing json from: ../../outputs/week4/json/radio_analysis_20250409_132414.json\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "id": "501aabec",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "id": "32cdf217",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "id": "dcf60c5f",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "id": "b08dbe7b",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 111,
    "id": "bd58af07",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "id": "72e9aa65",
    "metadata": {},
    "outputs": [
@@ -660,8 +660,8 @@
       "  TECHNICAL_ISSUE:\n",
       "    • \"the\"\n",
       "    • \"rear feels terrible\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_131930.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_131930.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132421.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132421.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "id": "d4f41702",
    "metadata": {},
    "outputs": [
@@ -735,8 +735,8 @@
       "    • \"track is getting wet\"\n",
       "  WEATHER:\n",
       "    • \"rain starting\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_131937.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_131937.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132429.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132429.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: neutral\n",
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "id": "b462e585",
    "metadata": {},
    "outputs": [
@@ -806,8 +806,8 @@
       "    • \"Safety\"\n",
       "  PIT_CALL:\n",
       "    • \"box box box\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_131944.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_131944.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250409_132436.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250409_132436.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "id": "e5a6d1bb",
    "metadata": {},
    "outputs": [
@@ -886,6 +886,44 @@
     "# Calculate success rate\n",
     "triggered_rules = sum(1 for recs in [grip_recommendations, weather_recommendations, incident_recommendations] if recs)\n",
     "print(f\"Rules Successfully Triggered: {triggered_rules}/3 ({triggered_rules/3*100:.0f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6fb9443",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "236a0834",
+   "metadata": {},
+   "source": [
+    "# Summary: NLP Radio Rules for F1 Strategy\n",
+    "\n",
+    "In this notebook, we've successfully implemented a rule-based expert system that analyzes Formula 1 team radio communications to make strategic recommendations. This adds a critical qualitative dimension to our F1 strategy system.\n",
+    "\n",
+    "## Key Accomplishments\n",
+    "\n",
+    "1. **Radio Data Integration**\n",
+    "   - Connected our expert system to the NLP radio analysis pipeline.\n",
+    "   - Processed structured data from radio messages with sentiment, intent, and entity information.\n",
+    "   - Transformed this data into RadioFact objects for use in our rule engine.\n",
+    "\n",
+    "2. **Strategic Rules Implementation**\n",
+    "   - Implemented three key radio-based rules:\n",
+    "     - **Grip Issue Response**: Identifies when drivers report tire problems.\n",
+    "     - **Weather Information Adjustment**: Detects changing weather conditions.\n",
+    "     - **Incident Reaction**: Recognizes safety car and yellow flag opportunities.\n",
+    "\n",
+    "3. **Testing and Refinement**\n",
+    "   - Tested the rules with real radio messages.\n",
+    "   - Refined the rule conditions based on actual NLP output patterns.\n",
+    "   - Achieved successful activation of all three rules with our mock examples.\n",
+    "\n",
+    "This notebook completes the third major component of our F1 strategy expert system, providing it with the ability to incorporate the critical information communicated over team radio, which often contains early warnings and strategic context not available in the telemetry data alone."
    ]
   }
  ],
