--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -14,29 +14,345 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch\n",
+    "from ultralytics import YOLO\n",
+    "from collections import Counter\n",
+    "import time as pytime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "YOLO(\n",
+       "  (model): DetectionModel(\n",
+       "    (model): Sequential(\n",
+       "      (0): Conv(\n",
+       "        (conv): Conv2d(3, 48, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (1): Conv(\n",
+       "        (conv): Conv2d(48, 96, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (2): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(96, 96, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(192, 96, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(48, 48, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(48, 48, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (3): Conv(\n",
+       "        (conv): Conv2d(96, 192, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (4): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(192, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(576, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-3): 4 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (5): Conv(\n",
+       "        (conv): Conv2d(192, 384, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (6): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(384, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(1152, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-3): 4 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (7): Conv(\n",
+       "        (conv): Conv2d(384, 576, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (8): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(576, 576, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (9): SPPF(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(576, 288, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): MaxPool2d(kernel_size=5, stride=1, padding=2, dilation=1, ceil_mode=False)\n",
+       "      )\n",
+       "      (10): Upsample(scale_factor=2.0, mode='nearest')\n",
+       "      (11): Concat()\n",
+       "      (12): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(960, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(768, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (13): Upsample(scale_factor=2.0, mode='nearest')\n",
+       "      (14): Concat()\n",
+       "      (15): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(576, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(384, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (16): Conv(\n",
+       "        (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (17): Concat()\n",
+       "      (18): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(576, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(768, 384, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (19): Conv(\n",
+       "        (conv): Conv2d(384, 384, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "        (act): SiLU(inplace=True)\n",
+       "      )\n",
+       "      (20): Concat()\n",
+       "      (21): C2f(\n",
+       "        (cv1): Conv(\n",
+       "          (conv): Conv2d(960, 576, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (cv2): Conv(\n",
+       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          (act): SiLU(inplace=True)\n",
+       "        )\n",
+       "        (m): ModuleList(\n",
+       "          (0-1): 2 x Bottleneck(\n",
+       "            (cv1): Conv(\n",
+       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (cv2): Conv(\n",
+       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "      (22): Detect(\n",
+       "        (cv2): ModuleList(\n",
+       "          (0): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(192, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "          (1): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(384, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "          (2): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(576, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "        )\n",
+       "        (cv3): ModuleList(\n",
+       "          (0): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "          (1): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(384, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "          (2): Sequential(\n",
+       "            (0): Conv(\n",
+       "              (conv): Conv2d(576, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (1): Conv(\n",
+       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "              (act): SiLU(inplace=True)\n",
+       "            )\n",
+       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
+       "          )\n",
+       "        )\n",
+       "        (dfl): DFL(\n",
+       "          (conv): Conv2d(16, 1, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "from ultralytics import YOLO\n",
-    "from collections import Counter\n",
-    "import time as pytime\n",
-    "\n",
     "# Use GPU if available\n",
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "# Load the Anti-Alpine optimized model\n",
     "model = YOLO(\"../f1-strategy/weights/model_anti_alpine.pt\")\n",
-    "model.to(DEVICE)\n",
-    "\n",
+    "model.to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Size and scale configuration\n",
     "FRAME_WIDTH = 1280  # Higher resolution for better detail\n",
     "CAR_LENGTH_METERS = 5.63  # Real car length in meters\n",
@@ -103,8 +419,15 @@
     "        'time': gap_time,                   # Time in seconds at 300km/h\n",
     "        'car1': class1,                     # Team of first car\n",
     "        'car2': class2                      # Team of second car\n",
-    "    }\n",
-    "\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_video_with_yolo(video_path, output_path=None):\n",
     "    global last_detections, track_history, id_counter, class_history, GAP_DETECTION_THRESHOLD\n",
     "    \n",
@@ -123,10 +446,15 @@
     "    # Calculate new height maintaining aspect ratio\n",
     "    target_height = int(FRAME_WIDTH * original_height / original_width)\n",
     "    \n",
-    "    # Configure output if requested\n",
+    "    out = None\n",
     "    if output_path:\n",
-    "        fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "        # Change codec from 'mp4v' to 'XVID' which is more reliable\n",
+    "        fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
     "        out = cv2.VideoWriter(output_path, fourcc, fps, (FRAME_WIDTH, target_height))\n",
+    "        if not out.isOpened():\n",
+    "            print(f\"Error: Could not create output video file at {output_path}\")\n",
+    "            print(\"Continuing without saving output...\")\n",
+    "            output_path = None\n",
     "    \n",
     "    # Variables for calculating real FPS\n",
     "    frame_count = 0\n",
@@ -376,7 +704,26 @@
     "    if output_path:\n",
     "        out.release()\n",
     "    cv2.destroyAllWindows()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipped forward 10 seconds to frame 623\n",
+      "Skipped forward 10 seconds to frame 1131\n",
+      "Skipped forward 10 seconds to frame 1631\n",
+      "Skipped forward 10 seconds to frame 2131\n"
+     ]
+    }
+   ],
+   "source": [
     "# Run with your video\n",
     "def main():\n",
     "    #video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
@@ -400,6 +747,20 @@
     "'+': more detection threshold\n",
     "'-': less detection threshold\n",
     "'d': 10 seconds ahead "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Gap Extraction "
    ]
   }
  ],
