organizing more the code

--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,321 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "YOLO(\n",
-       "  (model): DetectionModel(\n",
-       "    (model): Sequential(\n",
-       "      (0): Conv(\n",
-       "        (conv): Conv2d(3, 48, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (1): Conv(\n",
-       "        (conv): Conv2d(48, 96, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (2): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(96, 96, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(192, 96, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(48, 48, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(48, 48, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (3): Conv(\n",
-       "        (conv): Conv2d(96, 192, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (4): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(192, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(576, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-3): 4 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (5): Conv(\n",
-       "        (conv): Conv2d(192, 384, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (6): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(384, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(1152, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-3): 4 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (7): Conv(\n",
-       "        (conv): Conv2d(384, 576, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (8): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(576, 576, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (9): SPPF(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(576, 288, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): MaxPool2d(kernel_size=5, stride=1, padding=2, dilation=1, ceil_mode=False)\n",
-       "      )\n",
-       "      (10): Upsample(scale_factor=2.0, mode='nearest')\n",
-       "      (11): Concat()\n",
-       "      (12): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(960, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(768, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (13): Upsample(scale_factor=2.0, mode='nearest')\n",
-       "      (14): Concat()\n",
-       "      (15): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(576, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(384, 192, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(96, 96, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (16): Conv(\n",
-       "        (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (17): Concat()\n",
-       "      (18): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(576, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(768, 384, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (19): Conv(\n",
-       "        (conv): Conv2d(384, 384, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (act): SiLU(inplace=True)\n",
-       "      )\n",
-       "      (20): Concat()\n",
-       "      (21): C2f(\n",
-       "        (cv1): Conv(\n",
-       "          (conv): Conv2d(960, 576, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (cv2): Conv(\n",
-       "          (conv): Conv2d(1152, 576, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          (act): SiLU(inplace=True)\n",
-       "        )\n",
-       "        (m): ModuleList(\n",
-       "          (0-1): 2 x Bottleneck(\n",
-       "            (cv1): Conv(\n",
-       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (cv2): Conv(\n",
-       "              (conv): Conv2d(288, 288, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "      (22): Detect(\n",
-       "        (cv2): ModuleList(\n",
-       "          (0): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(192, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "          (1): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(384, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "          (2): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(576, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "        )\n",
-       "        (cv3): ModuleList(\n",
-       "          (0): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "          (1): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(384, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "          (2): Sequential(\n",
-       "            (0): Conv(\n",
-       "              (conv): Conv2d(576, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (1): Conv(\n",
-       "              (conv): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "              (act): SiLU(inplace=True)\n",
-       "            )\n",
-       "            (2): Conv2d(192, 10, kernel_size=(1, 1), stride=(1, 1))\n",
-       "          )\n",
-       "        )\n",
-       "        (dfl): DFL(\n",
-       "          (conv): Conv2d(16, 1, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use GPU if available\n",
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
@@ -348,8 +36,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Gap Calculation and Yolo video processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Dedining constants and variables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,8 +104,22 @@
     "last_detections = {}\n",
     "track_history = {}\n",
     "id_counter = 0\n",
-    "class_history = {}\n",
-    "\n",
+    "class_history = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Calculating the gap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calculate_gap(box1, box2, class1, class2):\n",
     "    \"\"\"Calculates the distance between centers using car width for scale\"\"\"\n",
     "    # Box centers\n",
@@ -423,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Processing the video with YOLO"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,21 +438,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipped forward 10 seconds to frame 623\n",
-      "Skipped forward 10 seconds to frame 1131\n",
-      "Skipped forward 10 seconds to frame 1631\n",
-      "Skipped forward 10 seconds to frame 2131\n"
-     ]
-    }
-   ],
+   "source": [
+    "### 1.4 Running a demo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Run with your video\n",
     "def main():\n",
